# business_data_scraper

./: .env.example  .gitignore  README.md  cache.py  config.py  db.py  export_excel.py  models.py  pdf_layouts.py  pipeline.py  pyproject.toml  reset_for_rerun.py
clients/: brave_search.py  claude_ai.py  gleif.py  northdata_browser.py  opencorporates.py  pappers.py  website_scraper.py
docs/: pipeline_technical_reference.md
docs/superpowers/plans/: 2026-06-01-stage5-single-call-and-rerun-reporting.md
docs/superpowers/specs/: 2026-06-01-stage5-single-call-and-rerun-reporting-design.md  2026-06-01-usage-limit-handling-design.md
stages/: s01_pdf_extract.py  s02_northdata.py  s03_registry_fallback.py  s04_ceo_lookup.py  s04b_structure.py  s05_ai_enrich.py  s06_normalize.py  s07_export.py
utils/: logging_setup.py  rate_limiter.py  retry.py
